Allow admin users to see admin link.

--- a/leaseslicensing/templates/webtemplate_dbca/includes/staff_menu.html
+++ b/leaseslicensing/templates/webtemplate_dbca/includes/staff_menu.html
@@ -1,7 +1,8 @@
 {% load users %}
 {% is_finance_officer as is_finance_officer %}
+{% is_leaseslicensing_admin as is_leaseslicensing_admin_user %}
 
-{% if is_finance_officer %}
+{% if is_finance_officer or is_leaseslicensing_admin_user %}
 <li>
     <a  class="dropdown-item" target="_blank" href="/admin/">Admin</a>
 </li>
