--- a/leaseslicensing/templates/leaseslicensing/base.html
+++ b/leaseslicensing/templates/leaseslicensing/base.html
@@ -31,7 +31,8 @@
         {% block custom_js %}
             <script language="javascript">
                     var env = {
-                        "kmi_server_url": "{{ GIS_SERVER_URL }}"
+                        "kmi_server_url": "{{ KMI_SERVER_URL }}",
+                        "gis_server_url": "{{ GIS_SERVER_URL }}"
                     }
 
             </script>
