--- a/leaseslicensing/templates/ledgerui/accounts_base_b5.html
+++ b/leaseslicensing/templates/ledgerui/accounts_base_b5.html
@@ -25,7 +25,8 @@
 
 <script language="javascript">
                     var env = {
-                        "kmi_server_url": "{{ GIS_SERVER_URL }}"
+                        "kmi_server_url": "{{ KMI_SERVER_URL }}",
+                        "gis_server_url": "{{ GIS_SERVER_URL }}"
                     }
 </script>
 
