--- a/leaseslicensing/templates/ledgerui/accounts_base_b5.html
+++ b/leaseslicensing/templates/ledgerui/accounts_base_b5.html
@@ -29,11 +29,7 @@
     }
 </script>
 
-{% if app_build_url %}
-    <script type="text/javascript" src="{{ app_build_url }}"></script>
-{% else %}
-    <script type="text/javascript" src="{% static 'leaseslicensing_vue/js/app.js' %}?v={{build_tag}}"></script>
-{% endif %}
+<script type="module" src="{% vite_asset_url vue3_entry_script %}?v={{ build_tag }}"></script>
 
 {% endblock %}
 
